--- a/.github/workflows/standard-battery-tests-kurtosis.yml
+++ b/.github/workflows/standard-battery-tests-kurtosis.yml
@@ -110,6 +110,11 @@ jobs:
 
       - name: Install bats
         uses: bats-core/bats-action@3.0.0
+        with:
+          support-path: "${{ github.workspace }}/lib/bats-support"
+          assert-path: "${{ github.workspace }}/lib/bats-assert"
+          detik-path: "${{ github.workspace }}/lib/bats-detik"
+          file-path: "${{ github.workspace }}/lib/bats-file"
 
       - name: Install polycli
         run: |
