feat: clean up rpc tests RPC endpoint logic
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/standard-battery-tests-nightly-rpc.yml
+++ b/.github/workflows/standard-battery-tests-nightly-rpc.yml
@@ -1,8 +1,4 @@
 # Make sure to configure the agglayer/e2e Github Secrets before running this test
-# L1_RPC_ENDPOINT: ${{ secrets.L1_RPC_ENDPOINT }}
-# L2_RPC_ENDPOINT: ${{ secrets.L2_RPC_ENDPOINT }}
-# L1_FUNDED_PRIVATE_KEY: ${{ secrets.L1_FUNDED_PRIVATE_KEY }}
-# L2_FUNDED_PRIVATE_KEY: ${{ secrets.L2_FUNDED_PRIVATE_KEY }}
 name: Standard Battery Tests - RPC (Nightly)
 
 on:
@@ -79,7 +75,7 @@ jobs:
       POLYCLI_VERSION: v0.1.84
       AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'main' }}
       L1_RPC_ENDPOINT: ${{ secrets.L1_RPC_ENDPOINT }}
-      L2_RPC_ENDPOINT: ${{ secrets.L2_RPC_ENDPOINT }}
+      L2_RPC_ENDPOINT: ${{ matrix.target-network == 'cardona' && secrets.L2_CARDONA_RPC_ENDPOINT || secrets.L2_BALI_RPC_ENDPOINT }}
       L1_FUNDED_PRIVATE_KEY: ${{ secrets.L1_FUNDED_PRIVATE_KEY }}
       L2_FUNDED_PRIVATE_KEY: ${{ secrets.L2_FUNDED_PRIVATE_KEY }}
       TARGET_NETWORK: ${{ matrix.target-network }}
@@ -144,7 +140,11 @@ jobs:
       - name: Validate RPC Endpoint
         run: |
           cast chain-id --rpc-url ${{ secrets.L1_RPC_ENDPOINT }}
-          cast chain-id --rpc-url ${{ secrets.L2_RPC_ENDPOINT }}
+          if [[ "${{ matrix.target-network }}" == "cardona" ]]; then
+            cast chain-id --rpc-url ${{ secrets.L2_CARDONA_RPC_ENDPOINT }}
+          else
+            cast chain-id --rpc-url ${{ secrets.L2_BALI_RPC_ENDPOINT }}
+          fi
 
       - name: Validate test file existence
         run: |
