--- a/scenarios/stress-test/env.example
+++ b/scenarios/stress-test/env.example
@@ -1,2 +1,2 @@
-STRESS_DURATION=30s
-CONTAINER_MAPPINGS_FILE="./assets/container_mappings.json"
+TEST_DURATION=30s
+STRESS_TEST_INPUT="./assets/container_mappings.json"
