--- a/.github/workflows/standard-battery-tests-rpc.yml
+++ b/.github/workflows/standard-battery-tests-rpc.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
             pushd agglayer-e2e || exit 1
             # strictly detect tags with file_tags=standard and test_tags=standard
-            files=$(grep -rl '# bats \(file_tags\|test_tags\)=standard\([[:space:]]\|$\)' ./tests | grep '\.bats$' || true)
+            files=$(grep -rlP '#\s*bats\s+(?:file_tags|test_tags)=[^#]*\bstandard\b(?!-)' ./tests | grep '\.bats$' || true)
             echo "Found files:"
             echo "$files"
             # Remove empty lines and ensure valid JSON array without trailing empty string
