--- a/scenarios/agglayer-upgrade-with-supplied-version/assets/cdk-erigon-pp.yml
+++ b/scenarios/agglayer-upgrade-with-supplied-version/assets/cdk-erigon-pp.yml
@@ -10,8 +10,7 @@ args:
   verbosity: debug
   zkevm_contracts_image: leovct/zkevm-contracts:v9.0.0-rc.6-pp-fork.12
   zkevm_prover_image: hermeznetwork/zkevm-prover:v8.0.0-RC16-fork.12
-  additional_services:
-    - tx_spammer
+  additional_services: []
   consensus_contract_type: pessimistic
   erigon_strict_mode: false
   gas_token_enabled: false
