--- a/tests/aggkit/.env.example
+++ b/tests/aggkit/.env.example
@@ -39,6 +39,9 @@ L2_BRIDGE_ADDRESS=0x2222222222222222222222222222222222222222
 # Address of the token used on L1 for bridging (e.g. POL)
 POL_TOKEN_ADDRESS=0x3333333333333333333333333333333333333333
 
+# Address of GlobalExitRoot on L1
+L1_GER_ADDRESS=0x4444444444444444444444444444444444444444
+
 # Address of GlobalExitRoot on L2
 L2_GER_ADDRESS=0x4444444444444444444444444444444444444444
 
