--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -151,6 +151,8 @@ jobs:
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats \
                  || exit 1
           elif [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-pessimistic" ]]; then
+            chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
+            export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
                  || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
