--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -49,9 +49,8 @@ on:
 
       aggsender-find-imported-bridge-artifact:
         description: "Path for aggsender to find the imported bridge"
-        required: false
+        required: true
         type: string
-        default: ""
 
       event-name:
         description: "Event name to be used for the test"
@@ -142,17 +141,15 @@ jobs:
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
           export PROJECT_ROOT="$PWD"
           export ENCLAVE_NAME="${{ inputs.kurtosis-cdk-enclave-name }}"
+          chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
+          export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
           if [[ "${{ inputs.test-name }}" == "test-single-l2-network-fork12-global-index-pp-old-contracts" ]]; then
-            chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
-            export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             bats ./tests/aggkit/global-index-pp-old-contracts.bats \
                  || exit 1
           elif [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-succinct-aggoracle-committee" ]]; then
             bats ./tests/aggkit/bridge-e2e-aggoracle-committee.bats \
                  || exit 1
           elif [[ "${{ inputs.test-name }}" == "test-single-l2-network-op-pessimistic" ]]; then
-            chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
-            export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
             bats ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
                  || exit 1
           elif [[ $ENCLAVE_NAME == "op" ]]; then
