--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,20 +13,18 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
-      - uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Get short commit id
         run: |
           short_commit_id=$(git rev-parse --short HEAD)
           echo "SHORT_COMMIT_ID=${short_commit_id}" >> "${GITHUB_ENV}"
-          echo "SHORT_COMMIT_ID=${short_commit_id}" # debug
+          echo "SHORT_COMMIT_ID=${short_commit_id}"
 
       - name: Build image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          tags: ${{ vars.DOCKER_USERNAME }}/e2e:${{ env.SHORT_COMMIT_ID }}
+          platforms: linux/amd64,linux/arm64
+          tags: e2e:${{ env.SHORT_COMMIT_ID }}
           push: false
