--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -2,12 +2,8 @@ name: docker-push
 
 on:
   # Trigger the workflow on pull requests made to the main branch.
-  # But avoid creating new images when changes only affect .github files.
   push:
-    branches:
-      - main
-    paths-ignore:
-      - ".github/**"
+    branches: ["main"]
 
   # Allow manual triggering of the workflow.
   workflow_dispatch:
@@ -17,18 +13,28 @@ on:
         type: string
         required: false
 
-permissions:
-  contents: read
-  packages: write
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: agglayer/e2e
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
+      - uses: docker/login-action@184bdaa0721073962dff0199f1fb9940f07167d1 # v3.5.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get short commit id
         run: |
@@ -37,7 +43,19 @@ jobs:
           echo "SHORT_COMMIT_ID=${short_commit_id}"
 
       - name: Build and push image
+        id: push
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          tags: ghcr.io/agglayer/e2e:${{ env.SHORT_COMMIT_ID }}
           push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.SHORT_COMMIT_ID }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      
+      # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how
+      # it was built. It increases supply chain security for people who consume the image.
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
