--- a/.github/workflows/kurtosis-e2e-multi-chain.yml
+++ b/.github/workflows/kurtosis-e2e-multi-chain.yml
@@ -10,7 +10,7 @@ on:
         type: string
       kurtosis-cdk-ref:
         description: "kurtosis-cdk repo ref (branch, tag, or commit)"
-        default: "jhilliard/aggsender-validator-committee" # FIXME: Change this to main before merging
+        default: "main"
         required: true
         type: string
       kurtosis-enclave-name:
@@ -79,8 +79,8 @@ jobs:
         testfile: ${{ fromJson(needs.discover-standard-tests.outputs.testfiles) }}
     env:
       POLYCLI_VERSION: v0.1.84
-      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref }}
-      KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref }}
+      AGGLAYER_E2E_REF: ${{ inputs.agglayer-e2e-ref || 'main' }}
+      KURTOSIS_CDK_REF: ${{ inputs.kurtosis-cdk-ref  || 'jhilliard/aggsender-validator-committee' }}
       KURTOSIS_ENCLAVE_NAME: ${{ inputs.kurtosis-enclave-name }}
     #   DEFAULT_L2_CLIENT: ${{ inputs.stack }}
     steps:
